<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_ly"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/main_ly"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/tool_back">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/f1"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/whatsapp_open"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_toStartOf="@+id/menu_open"
                android:src="@drawable/ic_whatsapp" />

            <ImageView
                android:id="@+id/menu_open"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_menu" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/banner_100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_whats_web"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="2dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/qr_scan"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginLeft="5dp"
                                android:padding="12dp"
                                android:src="@drawable/ic_qrcode" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_toEndOf="@id/qr_scan"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/f1"
                                    android:text="@string/whats_web"
                                    android:textColor="@color/black"
                                    android:textSize="18sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/f1"
                                    android:text="@string/scan_qr_code"
                                    android:textColor="@color/gray"
                                    android:textSize="16sp" />

                            </LinearLayout>

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_wa_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cv_whats_web"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="2dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/wa_status"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginLeft="5dp"
                                android:padding="12dp"
                                android:src="@drawable/ic_whatsappstatus" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_toEndOf="@id/wa_status"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/f1"
                                    android:text="@string/whatsapp_status"
                                    android:textColor="@color/black"
                                    android:textSize="18sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/f1"
                                    android:text="@string/save_status_image_amp_videos"
                                    android:textColor="@color/gray"
                                    android:textSize="16sp" />

                            </LinearLayout>

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_saved_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/cv_wa_status"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="2dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/saved_status"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginLeft="5dp"
                                android:padding="12dp"
                                android:src="@drawable/ic_savedstatus" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_toEndOf="@id/saved_status"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/f1"
                                    android:text="@string/saved_status"
                                    android:textColor="@color/black"
                                    android:textSize="18sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/f1"
                                    android:text="@string/show_saved_image_videos"
                                    android:textColor="@color/gray"
                                    android:textSize="16sp" />

                            </LinearLayout>

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_whats_direct_msg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cv_saved_status"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="2dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/whats_direct_msg"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginLeft="5dp"
                                android:padding="12dp"
                                android:src="@drawable/ic_direct_message" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_toEndOf="@id/whats_direct_msg"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/f1"
                                    android:text="@string/direct_message"
                                    android:textColor="@color/black"
                                    android:textSize="18sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/f1"
                                    android:text="@string/send_direct_message_on_whatsapp"
                                    android:textColor="@color/gray"
                                    android:textSize="16sp" />

                            </LinearLayout>

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_whats_share"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cv_whats_direct_msg"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="2dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/whats_share"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginLeft="5dp"
                                android:padding="12dp"
                                android:src="@drawable/ic_shareapp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_toEndOf="@id/whats_share"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/f1"
                                    android:text="@string/share"
                                    android:textColor="@color/black"
                                    android:textSize="18sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/f1"
                                    android:text="@string/share_app_with_family_amp_friends"
                                    android:textColor="@color/gray"
                                    android:textSize="16sp" />

                            </LinearLayout>

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_ly"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@color/white" />

</androidx.drawerlayout.widget.DrawerLayout>