<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Activity.Direct_MsgActivity">

    <RelativeLayout
        android:id="@+id/msg_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/tool_back">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/direct_message"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/msg_title">

        <RelativeLayout
            android:id="@+id/num_phonr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/button_bg"
                android:gravity="center"
                app:ccpDialog_textColor="@color/black"
                app:ccp_defaultNameCode="In" />

            <EditText
                android:id="@+id/phoneText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@id/ccp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/f1"
                android:gravity="center"
                android:hint="@string/enter_phone_number"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@android:color/black"
                tools:ignore="TextFields" />

        </RelativeLayout>

        <EditText
            android:id="@+id/whats_dir_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/num_phonr"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/f1"
            android:hint="Enter Message \n \n"
            android:maxLines="5"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/black" />

        <TextView
            android:id="@+id/msg_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/whats_dir_msg"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/start_btn"
            android:fontFamily="@font/f1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/send_message"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/banner_50"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical" />

    </RelativeLayout>

</RelativeLayout>